, texture list update in material editor after texture creation, and texture editor resizing.

02-08-2023: Continue working on the texture compression. Refactored the RequestTexture2D function as well. In editor, image memory request will always use uncompressed format.
Added texture type for future use. Fully understood how block compression works, but calculating a good color reference is a nightmare!

03-08-2023: Realized I stored the indices in a wrong order for BC1! It should be from LSB anyway.

04-08-2023: Start other testing for choosing the best pair of reference color for BC1. Luminance min/max seems working, but it's not the best method.
Tried the closest line search method, looks promising! Consider to fix the length at 255. There is only a few noises in the image, I have to think about them.

05-08-2023: Discovered that the closest line method won't always work. So adding min/max method as a comparotor, choose the method that gives the smallest difference.

06-08-2023: Multi-threaded the block compression. Adjusted TAA parameter again. Apply the unused texture to proper material.

07-08-2023: Added a simple status text dialog for heavy tasks. Started adding high level implementation for managing GUI.
Started applying high level control to dialog...painful!

08-08-2023: Applied high level GUI class to texture editor too. Wrapped std::bind std::unique_ptr std::make_unique calls. Fixed the memory leak caused by lack of virtual destructor for UHGraphNode.
The material editor is the final one to apply high level class...painful!

09-08-2023: Refactored material gui controls. Found the roughness difference between base and translucent pass, need to address it. Fixed the indirect specular issue, I forgot adding result in the end of light compute shader.
Add size parameter to UploadAllData() function. Enhanced memcpy safety by using memcpy_s instead.
Finally refactored all GUIs used in editors.